# milvus-beir

./: .gitignore  .pre-commit-config.yaml  README.md  demo.py  hello_model.py  milvus_beir_demo.py  pyproject.toml
.github/workflows/: lint.yml  publish.yml  release.yml  test.yml
example/: milvus_beir_example.py
src/milvus_beir/: utils.py
src/milvus_beir/cli/: search_cli.py
src/milvus_beir/retrieval/search/: milvus.py  milvus_bak.py
src/milvus_beir/retrieval/search/dense/: dense_search.py
src/milvus_beir/retrieval/search/hybrid/: bm25_hybrid_search.py  sparse_hybrid_search.py
src/milvus_beir/retrieval/search/lexical/: bm25_search.py  multi_match_search.py
src/milvus_beir/retrieval/search/sparse/: sparse_search.py
tests/: conftest.py  test_search.py
