[project]
name = "milvus_beir"
version = "0.1.0"
description = "Default template for PDM package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pymilvus>=2.5.0", "milvus-model>=0.2.10", "beir>=2.0.0", "torch<=2.2.2", "ranx>=0.3.20"]
authors = [
    {name = "zhuwenxing", email = "wenxing.zhu@zilliz.com"},
]
license = {text = "MIT"}

[tool.pdm]
distribution = true

[dependency-groups]
test = [
    "pytest>=8.3.4",
]
lint = [
    "ruff>=0.8.1",
]
